# lyx-gc.py

./: .gitignore  CHANGELOG.md  README.md  TODO.md  benchmark.py  check_deps.py  chktex.py  install_and_demo.ps1  install_and_demo.py  pyproject.toml  run_jlanguagetool.py  run_lyx.py  sample_errors.lyx  test_out1.txt
lyxgc/: __init__.py  chktex_parse.py  detect.py  engine.py  lacheck_parse.py  languagetool.py  report.py  rules.py  tokenizer.py
lyxgc/lang/: COMMON_ERRORS_RESEARCH.md  __init__.py  _common.py  _structural.py  af.py  ar.py  be.py  bg.py  br.py  ca.py  cop.py  cs.py  da.py  de.py  dsb.py  dv.py  el.py  en.py  eo.py  es.py  et.py  eu.py  fa.py  fi.py  fr.py  ga.py  gd.py  generic.py  gl.py  he.py  hi.py  hr.py  hsb.py  hu.py  hy.py  ia.py  id.py  is.py  it.py  ja.py  (+37 more)
lyxgc/lang/data/: af.json  ar.json  be.json  bg.json  br.json  ca.json  cs.json  da.json  de.json  dsb.json  dv.json  el.json  en.json  eo.json  es.json  et.json  eu.json  fa.json  fi.json  fr.json  ga.json  gd.json  generic.json  gl.json  he.json  hi.json  hr.json  hsb.json  hu.json  hy.json  ia.json  id.json  is.json  it.json  ja.json  kk.json  ko.json  ku.json  la.json  lo.json  (+30 more)
tests/: __init__.py  rule_triggers.py  rule_triggers_structural.py  test_correct_text.py  test_engine.py  test_integration.py  test_lang_registry.py  test_languagetool.py  test_output_formats.py  test_rules.py  test_rules_per_rule.py  test_tokenizer.py
tests/fixtures/: no_errors.tex  one_error.tex
tools/: migrate_lang_to_json.py
