[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
lyxgc = ["lang/data/*.json"]

[project]
name = "lyxgc"
version = "0.1.0dev2"
description = "Grammar checker for LyX and LaTeX"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = []
authors = [{name = "lyx-gc contributors"}]
keywords = ["lyx", "latex", "grammar-checker", "languagetool", "chktex", "lacheck"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/gmatht/lyx-gc.py"
Repository = "https://github.com/gmatht/lyx-gc.py"
Documentation = "https://wiki.lyx.org/Tools/LyX-GrammarChecker"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
